salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/Duplicate_Match__c.object-meta.xml
<CustomObject>
    <description>Stores potential duplicate matches between customers</description>
    <label>Duplicate Match</label>
    <nameField>
        <displayFormat>DM-{0000}</displayFormat>
        <label>Match Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>