salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/fields/Customer_A__c.field-meta.xml
<CustomField>
    <fullName>Customer_A__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>First customer in the duplicate pair</description>
    <label>Customer A</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Duplicate Matches (A)</relationshipLabel>
    <relationshipName>Duplicate_Matches_A</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>