salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/fields/Customer_B__c.field-meta.xml
<CustomField>
    <fullName>Customer_B__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Second customer in the duplicate pair</description>
    <label>Customer B</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Duplicate Matches (B)</relationshipLabel>
    <relationshipName>Duplicate_Matches_B</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>