salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <description>Matching score between 0 and 100</description>
    <label>Match Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>