salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <description>Type of match detected</description>
    <label>Match Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>