salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Date and time when the match was reviewed</description>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>