salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who reviewed the match</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Duplicate_Matches_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>