salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/validationRules/Different_Customers.validationRule-meta.xml
<ValidationRule>
    <fullName>Different_Customers</fullName>
    <active>true</active>
    <description>Ensures Customer A and Customer B are different</description>
    <errorConditionFormula>Customer_A__c = Customer_B__c</errorConditionFormula>
    <errorMessage>Customer A and Customer B must be different records</errorMessage>
</ValidationRule>