salesforce/shopnow-deduplication/force-app/main/default/objects/Duplicate_Match__c/validationRules/Match_Score_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Match_Score_Range</fullName>
    <active>true</active>
    <description>Ensures match score is between 0 and 100</description>
    <errorConditionFormula>OR(
        Match_Score__c &lt; 0,
        Match_Score__c &gt; 100
    )</errorConditionFormula>
    <errorDisplayField>Match_Score__c</errorDisplayField>
    <errorMessage>Match Score must be between 0 and 100</errorMessage>
</ValidationRule>